# CornerHead

./: .dockerignore  .gitignore  .mutagenignore  AGENTS.md  CLAUDE.md  LOGBOOK.md  pyproject.toml
configs/: tushare_update_schedule.json
configs/agent_output_template/: README.md  candidate.py  main.py  nl_prompt.md  trading.py
configs/data/: snapshot_columns.json
configs/experiments/: pilot_2020_daily.yaml
configs/prompts/: PROMPTS.md
docs/: QMT_documentation.md  agent_design.md  aliyun_qmt_deployment.md  data_documentation.md  deployment_documentation.md  environment_design.md  heuristic_learning_trading_system.md  live_qmt_workflow.md  parameters_reference.md  pipeline_design.md  units_reference.md
docs/logbook/: DETAILED_LOGBOOK.md
ops/cron/: install_tushare_cron.py  tushare_update.cron
ops/docker/: sandbox.Dockerfile
ops/qmt/: README.md  qmt_bridge_config.example.json  qmt_client_bridge.py  qmt_monitor.sh  qmt_readonly_bridge.py  qmt_realtime_export.py
ops/webui/: frontend_setup.sh  nginx-cornerhead.conf  webui_stack.sh
scripts/: _bootstrap.py  hl.py
scripts/data/: build_features.py  build_pit_events.py  tushare_audit.py  tushare_cron_update.py  tushare_download.py  tushare_realtime.py
scripts/dev/: export_prompts.py  export_units.py  replay_benchmark.py
scripts/experiments/: _cli.py  report_experiment.py  run_audit_session.py  run_experiment.py  run_interactive_experiment.py
scripts/live/: qmt_live_monitor.py
scripts/tushare/: __init__.py  audit.py  common.py  cron_update.py  download.py
tests/: __init__.py
tests/unit/: __init__.py  (+38 more)
(+201 files in other folders)
