[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autotrade"
version = "0.1.0"
description = "Heuristic Learning trading research framework for AutoTrade."
requires-python = ">=3.11"
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "pyarrow",
  "PyYAML",
  "requests",
]

[tool.setuptools.packages.find]
where = ["src"]
