[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autotrade"
version = "0.1.0"
description = "Heuristic Learning trading research framework for AutoTrade."
requires-python = ">=3.11"
dependencies = [
  "duckdb",
  "matplotlib",
  "numpy",
  "pandas",
  "pyarrow",
  "PyYAML",
  "requests",
]

[project.optional-dependencies]
# Console/WebUI service deps: `pip install -e '.[webui]'`
webui = [
  "fastapi",
  "uvicorn",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = ".runtime/pytest_cache"
